# couplr

./: .Rbuildignore  .Rhistory.bak  .gitignore  .run_check_win_devel.R  ALGORITHM_ROADMAP.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESCRIPTION  GABOW_TARJAN_FIX.md  GABOW_TARJAN_INTERFACE_BUG.md  GABOW_TARJAN_SEGFAULT_BUG.md  INCREMENTAL_OPTIMIZATION_COMPLETE.md  LICENSE  NAMESPACE  NETWORK_SIMPLEX_PLAN.md  NEWS.md  OPTIMIZATION_SUMMARY.md  RCPP_REFACTOR_PLAN.md  README.md  STEP1_OPTIMIZATION_ANALYSIS.md  STEP1_OPTIMIZATION_COMPLETE.md  STEP1_PATCH_INSTRUCTIONS.md  STEP1_QUICK_FIX_SUMMARY.md  TEST_COVERAGE_ANALYSIS.md  _pkgdown.yml  benchmark_all_solvers.R  benchmark_complete.R  benchmark_complete_results.rds  benchmark_readme.R  benchmark_readme_results.rds  benchmark_step1.R  benchmark_step1_results.rds  codecov.yml  cran-comments.md  gt-speedup.md  llms.txt  ns_check_out.txt  optimized_step1.cpp  (+8 more)
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: R-CMD-check.yaml  paper.yml  test-coverage.yaml
R/: RcppExports.R  animate.R  assignR-package.R  assignment.R  assignment_batch.R  catch-routine-registration.R  couplr-package.R  data.R  kbest_assignment.R  lapR-package.R  lap_solve.R  lap_solve_batch.R  lap_solve_kbest.R  matching_blocks.R  matching_cardinality.R  matching_cem.R  matching_constraints.R  matching_core.R  matching_diagnostics.R  matching_distance.R  matching_distance_cache.R  matching_full.R  matching_interop.R  matching_join.R  matching_messages.R  matching_output.R  matching_parallel.R  matching_plots.R  matching_propensity.R  matching_sensitivity.R  matching_subclass.R  morph_pixel.R  morph_tiling.R  morph_utils.R  prepare_cost_matrix.R  trace_aliases.R  trace_auction.R  trace_auction_scaled.R  trace_bottleneck.R  trace_bruteforce.R  (+19 more)
articles/: algorithms.html  algorithms.md  getting-started.html  getting-started.md  matching-workflows.html  matching-workflows.md  pixel-morphing.html  pixel-morphing.md
cpp_tests/: CMakeLists.txt
cpp_tests/tests/: test_auction.cpp  test_bottleneck.cpp  test_bruteforce.cpp  test_csa.cpp  test_csflow.cpp  test_cycle_cancel.cpp  test_greedy.cpp  test_ground_truth.cpp  test_hk01.cpp  test_hungarian.cpp  test_jv.cpp  test_jv_duals.cpp  test_lapmod.cpp  test_line_metric.cpp  test_network_simplex.cpp  test_orlin.cpp  test_push_relabel.cpp  test_ramshaw_tarjan.cpp  test_sinkhorn.cpp  test_ssap_bucket.cpp  test_ssp.cpp
dev_notes/: add_skip_on_cran.R  algorithms_vignette_preview.html  broad_check.R  check_ns_bug.R  compile_and_check.R  make_auction_demo.R  make_auction_scaled_demos.R  make_jv_8x8.R  make_munkres_demos.R  phase10_trace.R  phase10_trace2.R  phase10_trace3.R  phase11_ab.sh  phase11_ab_run.R  phase1_bench.txt  phase1_compile.R  phase1_test.R  phase2_bench.txt  phase2_diag.R  phase3_bench.txt  phase4_bench.txt  phase4b_ab_run.R  phase5_build.R  phase5_fuzz.R  phase5_test.R  phase6_bench.txt  phase7_ab.sh  phase7_ab_run.R  phase7_bench.R  phase7_bench.txt  phase7_profile.R  phase8_ab.sh  phase8_bench.txt  phase8_debug.R  preview_jv_20x20.html  preview_jv_3x3.html  preview_jv_50x50.html  preview_new_layout.R  render_previews.R  render_vignette.R  (+44 more)
docs/: 404.html  ALGORITHM_ROADMAP.html  ALGORITHM_ROADMAP.md  CHANGELOG.html  CHANGELOG.md  CLAUDE.html  CODE_OF_CONDUCT.html  CONTRIBUTING.html  CONTRIBUTING.md  LICENSE-text.html  LICENSE.html  NETWORK_SIMPLEX_PLAN.html  NETWORK_SIMPLEX_PLAN.md  VIGNETTE_IMPROVEMENT_PLAN.html  VIGNETTE_IMPROVEMENT_PLAN.md  authors.html  authors.md  copilot-instructions.html  copilot-instructions.md  extra.css  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml  todo.html  todo.md
examples/: balance_diagnostics_demo.R  distance_cache_demo.R  error_messages_demo.R  join_matched_demo.R  parallel_matching_demo.R
inst/: CITATION  NOTICE  WORDLIST
man/: BIG_COST.Rd  animated_methods.Rd  as_assignment_matrix.Rd  as_matchit.Rd  assignment.Rd  assignment_batch.Rd  assignment_duals.Rd  assignr-package.Rd  autoplot.balance_diagnostics.Rd  autoplot.matching_result.Rd  autoplot.sensitivity_analysis.Rd  bal.tab.matching_result.Rd  balance_diagnostics.Rd  bottleneck_assignment.Rd  build_cost_matrix.Rd  calculate_var_balance.Rd  can_parallelize.Rd  cardinality_match.Rd  cem_match.Rd  compute_distance_matrix.Rd  compute_distances.Rd  couplr-package.Rd  dot-analyze_tiling.Rd  dot-auto_breaks.Rd  dot-autoplot_hist.Rd  dot-autoplot_love.Rd  dot-autoplot_variance.Rd  dot-benchmark_square_tiling.Rd  dot-blocks_parallel.Rd  dot-clamp_rgb.Rd  dot-compute_pair_balance.Rd  dot-couples_blocked.Rd  dot-couples_from_distance.Rd  dot-couples_ratio.Rd  dot-couples_replace.Rd  dot-couples_single.Rd  dot-downscale_both.Rd  dot-exact_cost_and_solve.Rd  dot-expand_patch_assignment.Rd  dot-from_planar_rgb.Rd  (+66 more)
paper/: .gitignore  _verify_quickstart.R  bench_lalonde.R  bench_scaling.R  bench_scaling_alternatives.R  bench_scaling_couplr_only.R  benchmark-table.csv  benchmark-table.csv.bak_20260517_200237  benchmark-table.csv.bak_predispatch_20260517_223501  benchmark-table.csv.bak_predispatchfix_20260517_223946  build.ps1  capability-matrix.csv  debug_optmatch_10k.R  lalonde-per-covariate.csv  lalonde-results.csv  make-figure.R  paper.bib  paper.md  road-to-top.md  scaling-results.csv  test_pr.R
pkgdown/: extra.css
src/: Makevars  Makevars.win  RcppExports.cpp  RcppExports.cpp.bak  lap_internal.h  lap_utils.cpp  lap_utils.h  morph_pixel_level.BAK  prepare_cost_matrix.cpp  rcpp_interface.cpp  solve_auction.cpp  solve_bruteforce.cpp  solve_csflow.cpp  solve_hk01.cpp  solve_hungarian.cpp  solve_jv.cpp  solve_kbest_lawler.cpp  solve_murty.cpp  solve_ssp.cpp  test-gabow-tarjan.cpp  test-lap-utils.cpp
tests/: testthat.R  testthat.R.bak
vignettes/: algorithms.R  algorithms.Rmd  algorithms.html  comparison.Rmd  getting-started.R  getting-started.Rmd  getting-started.Rmd.bak  getting-started.html  matching-workflows.R  matching-workflows.Rmd  pixel-morphing.BAK  pixel-morphing.R  pixel-morphing.Rmd  pixel-morphing.html  troubleshooting.Rmd
(+509 files in other folders)
